Bug 1620458 - Revert part of Bug 1594303 fix r=nical

When android SurfaceTexture is rendered to WebGL, the SurfaceTexture should not be attached to GL context of WebRender.

Differential Revision: https://phabricator.services.mozilla.com/D66367