gfx/webrender_bindings/RenderTextureHost.h
@@ -45,6 +45,10 @@ class RenderTextureHost {
   // becomes from 0 to 1. For now, it is used only for
   // SurfaceTextureHost/RenderAndroidSurfaceTextureHostOGL.
   virtual void PrepareForUse() {}
+  // Called asynchronouly when corresponding TextureHost's is actually going to
+  // be used by WebRender. For now, it is used only for
+  // SurfaceTextureHost/RenderAndroidSurfaceTextureHostOGL.
+  virtual void NofityForUse() {}
   // Called asynchronouly when corresponding TextureHost's mCompositableCount
   // becomes 0. For now, it is used only for
   // SurfaceTextureHost/RenderAndroidSurfaceTextureHostOGL.
