gfx/webrender_bindings/RenderThread.h
@@ -207,6 +207,9 @@ class RenderThread final {
   void NotifyNotUsed(uint64_t aExternalImageId);
 
   /// Can only be called from the render thread.
+  void NofityForUse(uint64_t aExternalImageId);
+
+  /// Can only be called from the render thread.
   void UnregisterExternalImageDuringShutdown(uint64_t aExternalImageId);
 
   /// Can only be called from the render thread.
